// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContextMenu > Basic rendering > renders content when opened via right-click 1`] = `
<DocumentFragment>
  <div
    class="select-none"
    data-popup-open=""
    data-pressed=""
    data-slot="context-menu-trigger"
  >
    Right-click me
  </div>
</DocumentFragment>
`;

exports[`ContextMenu > Basic rendering > renders the trigger properly 1`] = `
<DocumentFragment>
  <div
    class="select-none"
    data-slot="context-menu-trigger"
  >
    Right-click me
  </div>
</DocumentFragment>
`;

exports[`ContextMenu > Complex context menu > renders all components together properly 1`] = `
<DocumentFragment>
  <div
    class="select-none"
    data-popup-open=""
    data-pressed=""
    data-slot="context-menu-trigger"
  >
    Complex Trigger
  </div>
</DocumentFragment>
`;

exports[`ContextMenu > ContextMenuCheckboxItem > renders checked state properly 1`] = `
<DocumentFragment>
  <div
    class="select-none"
    data-popup-open=""
    data-pressed=""
    data-slot="context-menu-trigger"
  >
    Trigger
  </div>
</DocumentFragment>
`;

exports[`ContextMenu > ContextMenuCheckboxItem > renders unchecked state properly 1`] = `
<DocumentFragment>
  <div
    class="select-none"
    data-popup-open=""
    data-pressed=""
    data-slot="context-menu-trigger"
  >
    Trigger
  </div>
</DocumentFragment>
`;
